fix: Make site look better on mobile

--- a/packages/site/pages/styles.css
+++ b/packages/site/pages/styles.css
@@ -28,13 +28,6 @@
   opacity: 0.8;
 }
 
-html,
-body {
-  max-height: 100vh;
-  max-width: 100vw;
-  overflow: hidden;
-}
-
 body {
   background-color: var(--color-background);
   color: var(--color-text);
